--- a/styles/thirty-under-styles.css
+++ b/styles/thirty-under-styles.css
@@ -48,6 +48,10 @@ h1{
 
 
 
+.buttonContainer{
+    display:flex;
+    flex-direction: column;
+}
 .restartButton{
     font-size: 50px;
     padding: 10px 15px;
@@ -57,6 +61,18 @@ h1{
     border: solid black;
 }
 .restartButton:active{
+    box-shadow: none;
+    transform: translate(2px,2px);
+}
+.homeButton{
+    font-size: 50px;
+    padding: 10px 15px;
+    border-radius: 0%;
+    background-color: white;
+    box-shadow: 2px 2px black; 
+    border: solid black;
+}
+.homeButton:active{
     box-shadow: none;
     transform: translate(2px,2px);
 }
@@ -76,12 +92,21 @@ h1{
 }
 
 .headercontent{
-    font-size: 7vw;
+    font-size: 3vw;
 }
 
-@media screen and (orientation: landscape){
+@media screen and (orientation: portrait){
+    #startScreen{
+        font-size: 5vw;
+    }
+    h1{
+        font-size: 10vw;
+    }
+    #question{
+        font-size: 14vw;
+    }
     .headercontent{
-        font-size:3vw;
+        font-size: 7vw;
     }
 }
 
